--- a/styles.css
+++ b/styles.css
@@ -11,85 +11,118 @@
 
 /* HTML and Body Styles */
 
+* {
+  box-sizing: border-box;
+}
+
 html {
-   /* This fixed the problem where the page would load slightly left. */
-   max-width: 100%;
-   height: 100%;
-   overflow-x: hidden;
-   background-image: linear-gradient(rgb(129, 129, 129), rgb(202, 202, 202));
+  /* This fixed the problem where the page would load slightly left. */
+  max-width: 100%;
+  height: 100%;
+  overflow-x: hidden;
+  background-image: linear-gradient(rgb(129, 129, 129), rgb(202, 202, 202));
 }
 
 body {
-   width: 80%;
-   margin: 0 auto;
+  width: 80%;
+  margin: 0 auto;
 }
 
 @media (max-width: 1000px) {
+  body {
+    width: 100%;
+  }
 
-   body {
-      width: 100%;
-   }
-
-   header h1 {
-      font-size: 2em;
-   }
+  header h1 {
+    font-size: 2em;
+  }
 }
 
 /* Header Styles */
 
-header {
-   border-bottom: 2px solid yellow;
+header > div {
+  border-bottom: 2px solid yellow;
+  display: grid;
 }
 
-header img {
-   width: 10em;
-   border-radius: 50%;
-   margin-top: 1%;
+@media (max-width: 800px) {
+  header > div {
+    grid-template-rows: 1fr 12em 1fr;
+    grid-template-areas: "buttons" "image" "name";
+  }
+
+  .headName,
+  .headImage,
+  .headButtons {
+     margin-left: auto;
+     margin-right: auto;
+  }
+
+  .headImage {
+     margin-top: 0;
+     margin-bottom: 0;
+  }
 }
 
-header h1 {
-   margin: 0.5% auto;
-   font-size: 2em;
-   color:white;
+@media (min-width: 800px) {
+  header > div {
+    grid-template-columns: 12em 1fr 1fr;
+    grid-template-areas: "image name buttons";
+  }
 }
 
-header div {
-
-   display: block;
-   text-align: center;
-   margin: 0 auto;
+.headImage {
+  width: 10em;
+  border-radius: 50%;
+  grid-area: image;
+  margin-bottom: 5%;
+  margin-top: 5%;
 }
 
+.headName {
+  display: flex;
+  float: left;
+  align-self: center;
+  font-size: 2em;
+  color: white;
+  grid-area: name;
+}
 
- /* Navigation Styles */
+.headButtons {
+  grid-area: buttons;
+}
+
+/* Navigation Styles */
 
 .navBlock {
-   width: 100%;
-   text-align: center;
+  width: 100%;
+  text-align: center;
 }
 
 .navBlock h2 {
-   border-style: none;
-   display: inline-block;
-   width: 15%;
-   margin: 2%;
-   text-align: center;
-   color: white;
-   font-size: 1.2em;
+  border-style: none;
+  display: inline-block;
+  width: 20%;
+  padding: 2%;
+  text-align: center;
+  color: white;
+  font-size: 1.2em;
+  border-radius: 5%;
 }
 
 .navBlock h2:hover {
-   cursor: no-drop;
+  cursor: pointer;
+  background-color: rgba(255, 255, 0, 0.527);
+  transition: all 0.5s;
+  transform: scale(1.1);
 }
-
 
 /* Information Style */
 
-.bodyBlock>div {
-   display: flex;
-   clear: both;
+.bodyBlock > div {
+  display: flex;
+  clear: both;
 }
-
 
 #projectSection,
 #resumeSection,
