--- a/styles.css
+++ b/styles.css
@@ -18,9 +18,10 @@
 html {
   /* This fixed the problem where the page would load slightly left. */
   max-width: 100%;
-  height: 100%;
+  min-height: 100%;
   overflow-x: hidden;
   background-image: linear-gradient(rgb(129, 129, 129), rgb(202, 202, 202));
+  background-repeat: no-repeat;
 }
 
 body {
@@ -54,13 +55,13 @@ header > div {
   .headName,
   .headImage,
   .headButtons {
-     margin-left: auto;
-     margin-right: auto;
+    margin-left: auto;
+    margin-right: auto;
   }
 
   .headImage {
-     margin-top: 0;
-     margin-bottom: 0;
+    margin-top: 0;
+    margin-bottom: 0;
   }
 }
 
@@ -71,7 +72,7 @@ header > div {
   }
 
   .headImage {
-   margin-left: 5%;
+    margin-left: 5%;
   }
 }
 
@@ -138,11 +139,60 @@ header > div {
 /* Resume Section Styles */
 
 #resumeSection a {
-   margin: 0 auto;
-   text-decoration: none;
-   color: white;
+  margin: 0 auto;
+  text-decoration: none;
+  color: white;
 }
 
 #resumeSection a:hover {
-   color: yellow;
+  color: yellow;
+}
+
+/* Contact Form Styles */
+
+form {
+  margin: 5% auto;
+}
+
+input, .formText {
+   font-size: 2em;
+}
+
+input, textarea {
+  border: none;
+  background-image: none;
+  background-color: transparent;
+  -webkit-box-shadow: none;
+  -moz-box-shadow: none;
+  box-shadow: none;
+}
+
+input:focus, textarea:focus {
+  outline: 0;
+}
+
+.formText {
+  pointer-events: none;
+  transform: translateY(-100%) translateX(1%);
+}
+
+input {
+   border-bottom: 1px solid yellow;
+}
+
+input:focus + .formText {
+  transition: 0.5s;
+  transform: translateY(-275%);
+  font-size: 1.2em;
+}
+
+input:valid + .formText {
+   visibility: hidden;
+}
+
+textarea {
+   width: 100%;
+   height: 25vh;
+   font-size: 1.5em;
+   background-color: rgba(255, 255, 0, 0.082);
 }
