--- a/styles.css
+++ b/styles.css
@@ -284,4 +284,24 @@ textarea {
   transform: scale(1.1);
 }
 
+
 /* Project Tab Styles */
+
+#projectSection a {
+  margin: 0 auto;
+  text-decoration: none;
+  color: white;
+}
+
+#projectSection a:hover {
+  color: yellow;
+}
+
+#projectSection p {
+  font-size: 1.4em;
+  padding-left: 5%;
+}
+
+#projectSection div {
+  border-bottom: 3px solid black;
+}
