--- a/styles.css
+++ b/styles.css
@@ -298,10 +298,26 @@ textarea {
 }
 
 #projectSection p {
+  clear: both;
   font-size: 1.4em;
   padding-left: 5%;
 }
 
-#projectSection div {
+#projectSection>div {
   border-bottom: 3px solid black;
+}
+
+#pSnakeGameLink {
+  margin-right: 2em;
+}
+
+#pSnakeGameLink, #projectSection div div {
+  display: flex;
+  float: left;
+}
+
+#projectSection div div {
+  margin: 2em 0;
+  height: 2em;
+  width: 2em;
 }
