--- a/styles.css
+++ b/styles.css
@@ -2,7 +2,7 @@
 
 @font-face {
   font-family: openSans;
-  src: url(fonts/OpenSans-Regular.ttf) format("truetype");
+  src: url(AidenEyrePortfolio/fonts/OpenSans-Regular.ttf) format("truetype");
   font-weight: normal;
   font-style: normal;
 }
